# oxford-erp

src/frappe/: .gitignore  attributions.md  codecov.yml  cypress.config.js  package.json  pyproject.toml
src/frappe/.github/actions/setup/: action.yml
src/frappe/.github/helper/: ci.py  compare_default_js_bundle_size.py  roulette.py
src/frappe/.github/workflows/: backport.yml  backport_reminder.yml  build-and-commit-assets.yml  create-release.yml  default-js-bundle-size.yml  generate-pot-file.yml  labeller.yml  linters.yml  on_release.yml  run-indinvidual-tests.yml  server-tests.yml  ui-tests.yml
src/frappe/.greptile/: config.json
src/frappe/cypress/fixtures/: layout_target_doctype.js
src/frappe/cypress/integration/: awesome_bar.js  control_data.js  control_dynamic_link.js  control_icon.js  control_link.js  datetime_field_form_validation.js  depends_on.js  doctype_layout.js  form_builder.js  global_search_settings.js  grid.js  grid_row_form_tabs.js  list_saved_layouts.js  list_view_column_width.js  list_view_settings.js  login.js  navigation.js  print_format_builder.js  query_report.js  rounding.js  tree_view.js  web_form.js  workspace.js
src/frappe/esbuild/: esbuild.js
src/frappe/frappe/: __init__.py  _optimizations.py  app.py  apps.py  auth.py  boot.py  build.py  cache_manager.py  client.py  config.py  coverage.py  deprecation_dumpster.py  gunicorn_companion.py  handler.py  hooks.py  installer.py  migrate.py  monitor.py  onboarding.py  parallel_test_runner.py  patches.txt  permissions.py  sessions.py  share.py  translate.py  twofactor.py
src/frappe/frappe/api/: __init__.py  v2.py
src/frappe/frappe/commands/: redis_utils.py  site.py  test_commands.py  testing.py  translate.py  utils.py
src/frappe/frappe/core/api/: file.py  test_file.py  user_invitation.py
src/frappe/frappe/data/: google_fonts.json
src/frappe/frappe/database/: __init__.py  database.py  operator_map.py  query.py  schema.py  sequence.py
src/frappe/frappe/database/duckdb/: database.py  schema.py
src/frappe/frappe/database/mariadb/: database.py  mysqlclient.py  schema.py
src/frappe/frappe/database/postgres/: database.py  schema.py  setup_db.py
src/frappe/frappe/database/sqlite/: database.py
src/frappe/frappe/desk/: calendar.py  desk_views.py  desktop.py  gantt.py  like.py  link_preview.py  notifications.py  query_report.py  reportview.py  search.py  test_desktop.py  test_like.py  utils.py
src/frappe/frappe/desk/doctype_settings/: settings_map.py
src/frappe/frappe/desk/form/: activity.py  assign_to.py  document_follow.py  linked_with.py  load.py  save.py  test_assign.py  test_form.py  test_load.py  utils.py
src/frappe/frappe/email/: __init__.py  email_body.py  frappemail.py  inbox.py  queue.py  receive.py  test_email_body.py  test_inbox.py
src/frappe/frappe/geo/: country_info.json
src/frappe/frappe/gettext/: translate.py
src/frappe/frappe/integrations/: google_oauth.py  test_google_oauth.py
src/frappe/frappe/locale/: af.po  ar.po  bg.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fi.po  fr.po  hi.po  hr.po  hu.po  id.po  it.po  ko.po  mn.po  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  uz.po  vi.po  zh.po  zh_TW.po
src/frappe/frappe/model/: base_document.py  create_new.py  db_query.py  delete_doc.py  document.py  mapper.py  meta.py  naming.py  rename_doc.py  sync.py  workflow.py
src/frappe/frappe/model/utils/: mask.py  test_user_settings.py  user_settings.py
src/frappe/frappe/modules/: utils.py
src/frappe/frappe/patches/v15_0/: copy_disable_prepared_report_to_prepared_report.py  skip_gravatar_deletion_prompt_if_no_urls.py
src/frappe/frappe/patches/v16_0/: backfill_list_layout_route_signature.py  backfill_notification_email_type_preferences.py  backfill_notification_log_app.py  backfill_notification_log_title_description.py  migrate_workspace_sidebar_to_workspace.py  populate_workspace_sidebar_from_shortcuts.py  (+2 more)
src/frappe/frappe/query_builder/: builder.py  custom.py  functions.py  utils.py
src/frappe/frappe/realtime/: README.md  __init__.py  auth.py  bridge.py  config.py  context.py  dispatch.py  handlers.py  registry.py  server.py  socket.py  util.py
src/frappe/frappe/search/: sqlite_search.py
src/frappe/frappe/templates/: signup.html
src/frappe/frappe/testing/: environment.py  loader.py  runner.py
src/frappe/frappe/tests/: test_api.py  test_api_v2.py  test_assign.py  test_boot.py  test_caching.py  test_client.py  test_db.py  test_db_query.py  test_db_update.py  test_dependency_compat.py  test_document.py  test_domainification.py  test_global_search.py  test_goal.py  test_hooks.py  test_legacy_gravatar_cleanup.py  test_linked_with.py  test_mapper.py  test_mask_fields.py  test_monitor.py  test_naming.py  test_perf.py  test_permissions.py  test_preview.py  test_query.py  test_query_builder.py  test_query_report.py  test_realtime_py.py  test_rename_doc.py  test_reportview.py  test_safe_exec.py  test_sentry.py  test_sequence.py  test_test_utils.py  test_translate.py  test_utils.py  ui_test_helpers.py
src/frappe/frappe/utils/: __init__.py  background_jobs.py  backups.py  boilerplate.py  caching.py  change_log.py  csvutils.py  data.py  error.py  file_manager.py  formatters.py  global_search.py  goal.py  image.py  install.py  jinja.py  legacy_gravatar_cleanup.py  password.py  pdf.py  preview.py  print_format.py  print_format_generator.py  print_utils.py  redis_wrapper.py  response.py  safe_exec.py  scheduler.py  sentry.py  task_queue.py  test_print_format_generator.py  user.py  xlsxutils.py
src/frappe/frappe/www/: attribution.html  attribution.py  confirm_workflow_action.html  contact.html  contact.py  login.html  login.py  me.html  printpreview.html  printpreview.py  printview.py  update-password.html  update_password.py
src/frappe/realtime/: utils.js
src/frappe/realtime/middlewares/: authenticate.js
src/frappe/ui/: CLAUDE.md  CONTEXT.md  README.md  components.d.ts  package.json
src/frappe/ui/src/: index.ts  shims-icons.d.ts  socket.ts
src/frappe/ui/vite/: index.js
(+1193 files in other folders)
